# expert_system

./: .gitignore  CMakeLists.txt  Makefile  expert_system  main.cpp
headers/: Calculation.h  Checker.h  ExceptionExpSys.h  Expert_System.h  Fact.h  Reading.h  Rule.h
source/: Calculation.cpp  Checker.cpp  ExceptionExpSys.cpp  Expert_System.cpp  Fact.cpp  Reading.cpp  Rule.cpp
tests/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  ambiguos_test.txt  and.txt  corr.txt  corr_parenth.txt  corr_same.txt  my.txt
